hphp/hack/test/pocket_universes/typing/refinement_as.bad.php.exp
File "refinement_as.bad.php", line 12, characters 19-25:
Pocket Universes are not allowed on the right-hand side of `is`/`as` (Typing[4368])
File "refinement_as.bad.php", line 16, characters 19-23:
Invalid `as` expression hint (Typing[4195])
File "refinement_as.bad.php", line 16, characters 19-20:
The `as` operator cannot be used with an erased generic type parameter
File "refinement_as.bad.php", line 16, characters 19-23:
Pocket Universes are not allowed on the right-hand side of `is`/`as` (Typing[4368])
File "refinement_as.bad.php", line 21, characters 17-20:
Pocket Universes are not allowed on the right-hand side of `is`/`as` (Typing[4368])
File "refinement_as.bad.php", line 25, characters 17-21:
Invalid `as` expression hint (Typing[4195])
File "refinement_as.bad.php", line 25, characters 17-18:
The `as` operator cannot be used with an erased generic type parameter
File "refinement_as.bad.php", line 25, characters 17-21:
Pocket Universes are not allowed on the right-hand side of `is`/`as` (Typing[4368])
